--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,7 @@ a:active {
 
 .hero-block,
 .footer-block {
-  height: 390px;
+  height: 200px;
   width: 100%;
   position: absolute;
   top: 50%;
@@ -132,7 +132,8 @@ a:active {
   margin-top: -90px; }
 
 #hero {
-  background: #1abc9c; }
+  background-color: #00aaff;
+  background-image: '../img/geotown.png'; }
 
 #work {
   background: #3498db; }
@@ -158,7 +159,7 @@ a:active {
 #work .showcase {
   width: 100%;
   padding: 0px;
-  
+  height: 100px;
    }
 
 .showcase-tiles {
@@ -264,7 +265,7 @@ ul, menu, dir {
 	padding: 18px;
 }
 
-#networks .dribbble:hover {
+#networks .github:hover {
 	color: #ed6297;
 }
 
@@ -276,6 +277,6 @@ ul, menu, dir {
 	color: #2094CA;
 }
 
-#networks .mail:hover {
+#networks .music:hover {
 	color: #f39c12;
 }
