--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #545E6C;
-  background: #f5f5f5;
+  background: #FAFAFA;
   font-size: 14px;
   padding: 30px;
   -webkit-font-smoothing: antialiased;
